<resources>
    <string name="app_name">Notes</string>
    <string name="web_client_id">457715037846-ve9bavm9k3sv2q902211dk0hn4fmjset.apps.googleusercontent.com</string>
    <string name="email">EMAIL</string>
    <string name="password">PASSWORD</string>
    <string name="email2">Email</string>
    <string name="password2">Password</string>
    <string name="login">Sign In</string>
    <string name="signup">Signup</string>
    <string name="welcome_msg">Welcome to Engineering Notes</string>
    <string name="login_msg">Sign in to Continue</string>
    <string name="signup_msg">Sign up for an Account? Click Here</string>
    <string name="name">Name</string>
    <string name="contact">Contact</string>
    <string name="branch">Branch</string>
    <string name="year">Year</string>
    <string name="permissionForMsg">Do you want links of notes at time of exams on Whatsapp?</string>
    <string name="registered_msg">Already Registered? Click here to Login</string>
    <string name="msg_permission">Do you want to Notes-link at time of your Exam on your Whatsapp?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="loginLink">Already Registered ? Login from here</string>
    <string name="signupMsg">Signup to Continue</string>
    <string name="branch_heading">Select Branch</string>
    <string name="cs">Computer Science</string>
    <string name="it">Information Technology</string>
    <string name="s1">First Year</string>
    <string name="s2">Second Year</string>
    <string name="s3">Third Year</string>
    <string name="c">C Programming</string>
    <string name="cpp">C++ Programming(OOP)</string>
    <string name="mone">Mathematics-I</string>
    <string name="mtwo">Mathematics-II</string>
    <string name="cso">Computer System  Organization</string>
    <string name="cpi">Computer Peripherals and Interface</string>
    <string name="dsa">Data Structures and Algorithms</string>
    <string name="cms">Communication Skills</string>
    <string name="physics">Applied Physics</string>
    <string name="html">Web Development-I</string>
    <string name="icse">Introduction to Computer Science Engineering</string>
    <string name="dlcd">Digital Logic and Circuit Design</string>
    <string name="cn">Computer Networks</string>
    <string name="dc">Data Communication</string>
    <string name="cj">Core Java</string>
    <string name="aj">Advanced Java</string>
    <string name="discrete">Discrete Structures</string>
    <string name="ada">Analysis and Design of Algorithms</string>
    <string name="php">PHP Scripting</string>
    <string name="ees">Environment and Energy Studies</string>
    <string name="os">Operating System</string>
    <string name="android">Android</string>
    <string name="ppl">Principles of Programming Languages</string>
    <string name="dbms">Database Management Sytem</string>
    <string name="cs_banner_ad_unit_id">ca-app-pub-7681178287507851/7158923927</string>
    <string name="cs_banner_ad_unit_id_test">ca-app-pub-3940256099942544/6300978111</string>
    ca-app-pub-3940256099942544/6300978111
</resources>
