<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".RegisterActivity">

    <!--    <LinearLayout-->
<!--        android:id="@+id/signupLayout"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="@dimen/_170sdp"-->
<!--        android:gravity="center"-->
<!--        android:orientation="vertical"-->
<!--        android:paddingLeft="@dimen/_40sdp"-->
<!--        android:paddingRight="@dimen/_40sdp"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.0"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintVertical_bias="0.683">-->


    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.683">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/messageLayout2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/welcomeMsg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:text="@string/welcome_msg"
                    android:textColor="#8858F8"
                    android:textSize="@dimen/_17ssp" />

                <TextView
                    android:id="@+id/signupMsg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/signupMsg"
                    android:textSize="@dimen/_10ssp" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="@dimen/_150sdp"
                    android:layout_height="@dimen/_90sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    app:srcCompat="@drawable/rlogo" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_20sdp"

                android:layout_marginTop="@dimen/_20sdp"
                android:orientation="vertical"
                android:paddingLeft="@dimen/_30sdp"
                android:paddingRight="@dimen/_30sdp">

                <TextView
                    android:id="@+id/nameTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textSize="@dimen/_10ssp" />

                <EditText
                    android:id="@+id/nameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#8058F8"
                    android:ems="10"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/emailTextView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:text="@string/email2"
                    android:textSize="@dimen/_10ssp" />

                <EditText
                    android:id="@+id/emailEditText2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#8058F8"
                    android:ems="10"
                    android:inputType="textEmailAddress" />

                <TextView
                    android:id="@+id/contactTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:text="@string/contact"
                    android:textSize="@dimen/_10ssp" />

                <EditText
                    android:id="@+id/contactEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#8058F8"
                    android:ems="10"
                    android:inputType="phone" />

                <TextView
                    android:id="@+id/passwordTextView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:text="@string/password2"
                    android:textSize="@dimen/_10ssp" />

                <EditText
                    android:id="@+id/passwordEditText2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#8058F8"
                    android:ems="10"
                    android:inputType="textPassword" />

                <TextView
                    android:id="@+id/branchTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:text="@string/branch"
                    android:textSize="@dimen/_10ssp" />

                <Spinner
                    android:id="@+id/branchSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:backgroundTint="#8058F8"
                    tools:layout_editor_absoluteX="1dp"
                    tools:layout_editor_absoluteY="858dp" />

                <TextView
                    android:id="@+id/yearTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:text="@string/year"
                    android:textSize="@dimen/_10ssp" />

                <Spinner
                    android:id="@+id/yearSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:backgroundTint="#8058F8"
                    tools:layout_editor_absoluteX="1dp"
                    tools:layout_editor_absoluteY="858dp" />

                <TextView
                    android:id="@+id/msgPermissionTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:text="@string/msg_permission"
                    android:textSize="@dimen/_10ssp" />

                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:checkedButton="@id/yesRadioButton">


                    <RadioButton
                        android:id="@+id/yesRadioButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="#8058F8"

                        android:buttonTint="#8058F8"
                        android:text="@string/yes"
                        android:textSize="@dimen/_9ssp" />

                    <RadioButton
                        android:id="@+id/noRadioButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="#8058F8"
                        android:buttonTint="#8058F8"
                        android:text="@string/no"
                        android:textSize="@dimen/_9ssp" />

                </RadioGroup>

                <Button
                    android:id="@+id/signupButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    android:background="@drawable/round"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/signup"
                    android:textColor="@color/common_google_signin_btn_text_dark_default"
                    android:textSize="@dimen/_10ssp" />

                <TextView
                    android:id="@+id/loginLink"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:text="@string/loginLink"
                    android:textColor="#373535"
                    android:textSize="@dimen/_11ssp" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>