<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/ctoolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/titlebg"
        android:minHeight="?attr/actionBarSize"
        android:paddingBottom="2dp"
        android:theme="?attr/actionBarTheme"
        app:contentInsetStart="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <Button
            android:id="@+id/csignOutButton"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_30sdp"
            android:layout_gravity="end"
            android:background="@drawable/oval"
            android:text="Sign Out"
            android:textColor="@color/white"
            tools:layout_editor_absoluteX="319dp"
            tools:layout_editor_absoluteY="4dp"
            android:layout_marginRight="5dp"/>

    </androidx.appcompat.widget.Toolbar>


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/_5sdp"
        android:paddingRight="@dimen/_5sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ctoolbar"
        app:layout_constraintVertical_bias="0.01999998">

        <Button
            android:id="@+id/year1Button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_90sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@drawable/year_four"
            android:fontFamily="sans-serif"
            android:paddingRight="@dimen/_150sdp"
            android:text="@string/s1"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_18ssp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/year2Button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_90sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@drawable/year_two"
            android:fontFamily="sans-serif"
            android:paddingRight="@dimen/_150sdp"
            android:text="@string/s2"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_18ssp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/year3Button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_90sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@drawable/year_three"
            android:fontFamily="sans-serif"
            android:paddingRight="@dimen/_150sdp"
            android:text="@string/s3"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_18ssp"
            android:textStyle="bold" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.gms.ads.AdView
            android:id="@+id/csAdView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:adSize="BANNER"
            app:adUnitId="@string/cs_banner_ad_unit_id"></com.google.android.gms.ads.AdView>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>